[package]
authors = ["James Waples <jamwaffles@gmail.com>", "Henrik Alsér <henrik.alser@me.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "I2C/SPI driver for the SSD1306 OLED display controller"
documentation = "https://docs.rs/ssd1306"
keywords = ["no-std", "ssd1306", "oled", "embedded", "embedded-hal-async"]
license = "MIT OR Apache-2.0"
name = "ssd1306-async"
readme = "README.md"
repository = "https://github.com/kalkyl/ssd1306-async"
version = "0.1.0"
edition = "2018"
exclude = ["*.jpg", "*.bmp"]

[dependencies]
embedded-hal = "0.2.5"
embedded-hal-async = { version = "0.1.0-alpha.3" }
embassy-futures = "0.1.0"
display-interface = "0.4.1"
display-interface-i2c = "0.4.0"
display-interface-spi = "0.4.1"
embedded-graphics-core = { version = "0.3.2", optional = true }
byte-slice-cast = { version = "0.3.5", default-features = false }

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-rtic = "0.5.6"
panic-halt = "0.2.0"
cast = { version = "0.2.6", default-features = false }
# Used to load BMP images in various examples
tinybmp = "0.3.1"
embedded-graphics = "0.7.1"
# Used by the noise_i2c examples
rand = { version = "0.8.4", default-features = false, features = [ "small_rng" ] }
stm32f1xx-hal = { version = "0.7.0", features = [ "rt", "stm32f103" ] }

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
