[package]
authors = ["James Waples <jamwaffles@gmail.com>", "Henrik Alsér <henrik.alser@me.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "I2C/SPI driver for the SSD1306 OLED display controller"
documentation = "https://docs.rs/ssd1306"
keywords = ["no-std", "ssd1306", "oled", "embedded", "embedded-hal-async"]
license = "MIT OR Apache-2.0"
name = "ssd1306-async"
readme = "README.md"
repository = "https://github.com/kalkyl/ssd1306-async"
version = "0.1.0"
edition = "2021"
exclude = ["*.jpg", "*.bmp"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-futures = "0.1.0"
embedded-graphics-core = { version = "0.4.0", optional = true }
byte-slice-cast = { version = "1.2.2", default-features = false }

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
