[package]
edition = "2021"
name = "ssd1306-async-examples"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.3.2", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt", "nightly"] }

static_cell = { version = "1", features = ["nightly"]}

ssd1306-async = { path = "../" }
tinybmp = "0.3.1"
embedded-graphics = "0.7.1"
embedded-hal-async = "=1.0.0-rc.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "94586576a06cf5869d0cdea6d678a0448bb1fdf8" }

[profile.release]
debug = true
