[package]
edition = "2021"
name = "ssd1306-async-examples"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

static_cell = { version = "2.1.0", features = []}
portable-atomic = { version = "1.6", features = ["critical-section"] }


ssd1306-async = { path = "../" }
tinybmp = "0.6.0"
embedded-graphics = "0.8.1"
embedded-hal-async = "=1.0.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "e2f9a48457c5d54546a3861fb067071ce93f9742" }

[profile.release]
debug = true
